--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,8 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 } */
+body{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
